--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مدرسة مدينة عيسى الإعدادية للبنين</title>
+    <title>الحصول على الدرجات</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -16,16 +16,7 @@
             align-items: center;
             text-align: center;
         }
-        header {
-            width: 100%;
-            background-color: white;
-            padding: 20px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            margin: 10px 0;
-        }
-        input, select, button {
+        input, button {
             padding: 10px;
             margin: 10px 0;
             border: 1px solid #ccc;
@@ -42,92 +33,26 @@
         button:hover {
             background-color: #002244;
         }
-        table {
+        #result {
             margin-top: 20px;
-            border-collapse: collapse;
-            width: 300px;
-            background-color: white;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-        #loading {
-            font-size: 1.5em;
-            color: #003366;
-            margin-top: 20px;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: right;
-        }
-        th {
-            background-color: #003366;
-            color: white;
-        }
-        tr:hover {
-            background-color: #f1f1f1;
-        }
-        .hidden {
             display: none;
-        }
-        .student-name {
-            margin-top: 20px;
-            font-weight: bold;
-            font-size: 1.2em;
-        }
-        .popup {
-            display: none;
-            position: fixed;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            justify-content: center;
-            align-items: center;
-        }
-        .popup-content {
-            background-color: white;
-            padding: 20px;
-            border-radius: 5px;
-            text-align: center;
         }
     </style>
 </head>
 <body>
-    <header>
-        <img src="https://menafn.com/updates/pr/2020-01/05/AAK_33e2ac22-9image_story.png" width="200px">
-    </header>
-    <h1>مدرسة مدينة عيسى الإعدادية للبنين</h1>
-    <h2>استعلام مقعد الطالب</h2>
-    <input type="text" id="cprInput" placeholder="CPR/ادخل الرقم الشخصي" required>
-    <button onclick="GetClass()">ارسال</button>
-    <div id="loading" class="hidden">...جاري التحميل</div>
-    <div class="student-name" id="studentName"></div>
-    <div id="result" class="hidden"></div>
-
-    <div class="popup" id="errorPopup">
-        <div class="popup-content">
-            <p>الرجاء التأكد من الرقم الشخصي</p>
-            <button onclick="closePopup()">إغلاق</button>
-        </div>
-    </div>
+    <h1>الحصول على درجات الطالب</h1>
+    <input type="text" id="cprInput" placeholder="ادخل الرقم الشخصي (CPR)" required>
+    <button onclick="fetchGrades()">استعلام</button>
+    <div id="result"></div>
 
     <script>
-        async function GetClass() {
+        async function fetchGrades() {
             const cpr = document.getElementById('cprInput').value;
             const resultDiv = document.getElementById('result');
-            const studentNameDiv = document.getElementById('studentName');
-            const loadingDiv = document.getElementById('loading');
-            const errorPopup = document.getElementById('errorPopup');
+            resultDiv.innerHTML = ''; // Clear previous results
 
-            resultDiv.innerHTML = '';
-            resultDiv.classList.add('hidden');
-            studentNameDiv.innerHTML = '';
-            loadingDiv.classList.remove('hidden');
-            errorPopup.style.display = 'none';
             try {
-                const response = await fetch(`https://script.google.com/macros/s/AKfycbwia2rYs4VrKl3jEgDY55cgwYG9kFx74oUgR76OeirqymuY74mwdalCUUCpYVGJLsuhCg/exec?CPR=${cpr}`);
-                
+                const response = await fetch(`https://script.google.com/macros/s/AKfycbwHvAUloQ6zjTOhuUg0Oag5E5QPfKKdZptyCuuoC4ED55PMOKjGOlc2CkZaUIghndn9/exec?CPR=${cpr}`);
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
                 }
@@ -135,46 +60,17 @@
                 const data = await response.json();
                 if (data.length > 0) {
                     const student = data[0];
-                    let tableRows = '';
-
-                    for (const [key, value] of Object.entries(student)) {
-                        if (key !== "CPR" && key !== "اسم الطالب") {
-                            tableRows += `<tr><td>${value}</td><td>${key}</td></tr>`;
-                        }
-                    }
-
-                    if (tableRows) {
-                        resultDiv.innerHTML = `
-                            <h2>نتائج الدرجات</h2>
-                            <table>
-                                <tr><th>الدرجة</th><th>التقييم</th></tr>
-                                ${tableRows}
-                            </table>
-                        `;
-                        resultDiv.classList.remove('hidden');
-                    } else {
-                        errorPopup.style.display = 'flex';
-                    }
+                    resultDiv.innerHTML = `<h2>نتائج الدرجات</h2><p>اسم الطالب: ${student["اسم الطالب"]}</p><p>الدرجة: ${student["الدرجة"]}</p>`;
                 } else {
-                    errorPopup.style.display = 'flex';
+                    resultDiv.innerHTML = '<p>لا توجد بيانات للرقم الشخصي المدخل.</p>';
                 }
             } catch (error) {
                 console.error(error);
                 resultDiv.innerHTML = `<p>خطأ في جلب البيانات: ${error.message}</p>`;
-                resultDiv.classList.remove('hidden');
             } finally {
-                loadingDiv.classList.add('hidden');
+                resultDiv.style.display = 'block'; // Show results div
             }
         }
-
-        function closePopup() {
-            document.getElementById('errorPopup').style.display = 'none';
-        }
     </script>
-
-    <footer>
-        <p>© مدينة عيسى الاعدادية للبنين</p>
-        <p>تصميم الاستاذ/ السيد علي شرف</p>
-    </footer>
 </body>
 </html>
