--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             padding: 20px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
-        h1 {
+        h1, h2 {
             margin: 10px 0;
         }
-        input, select, button {
+        input, button {
             padding: 10px;
             margin: 10px 0;
             border: 1px solid #ccc;
@@ -42,81 +42,36 @@
         button:hover {
             background-color: #002244;
         }
-        table {
+        #result {
             margin-top: 20px;
-            border-collapse: collapse;
-            width: 300px;
-            background-color: white;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            display: none;
         }
         #loading {
+            display: none;
             font-size: 1.5em;
             color: #003366;
             margin-top: 20px;
         }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: right;
-        }
-        th {
-            background-color: #003366;
-            color: white;
-        }
-        tr:hover {
-            background-color: #f1f1f1;
-        }
-        .hidden {
-            display: none;
-        }
-        .student-name {
-            margin-top: 20px;
-            font-weight: bold;
-            font-size: 1.2em;
-        }
-        /* Styles for popup */
-        .popup {
-            display: none;
-            position: fixed;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            justify-content: center;
-            align-items: center;
-        }
-        .popup-content {
-            background-color: white;
-            padding: 20px;
-            border-radius: 5px;
-            text-align: center;
-        }
-        .popup button {
-            margin-top: 10px;
-            background-color: #003366;
-            color: white;
-            border: none;
-            padding: 10px;
-            cursor: pointer;
-        }
     </style>
 </head>
 <body>
-     <header>
+    <header>
         <img src="https://menafn.com/updates/pr/2020-01/05/AAK_33e2ac22-9image_story.png" width="200px">
     </header>
     <h1>مدرسة مدينة عيسى الإعدادية للبنين</h1>
     <h2>استعلام جلوس</h2>
     <input type="text" id="cprInput" placeholder="ادخل الرقم الشخصي (CPR)" required>
     <button onclick="fetchGrades()">استعلام</button>
+    <div id="loading">...جاري التحميل</div>
     <div id="result"></div>
 
     <script>
         async function fetchGrades() {
             const cpr = document.getElementById('cprInput').value;
             const resultDiv = document.getElementById('result');
+            const loadingDiv = document.getElementById('loading');
             resultDiv.innerHTML = ''; // Clear previous results
+            loadingDiv.style.display = 'none'; // Hide loading message
 
             // Validate CPR input
             if (!/^\d+$/.test(cpr)) {
@@ -126,6 +81,7 @@
             }
 
             try {
+                loadingDiv.style.display = 'block'; // Show loading message
                 const response = await fetch(`https://script.google.com/macros/s/AKfycbwxZBziWaH-ssVv3Fkf9_W4DoPLu5NQlJ20ZOlyixJFl2z4efwMc-TmRF4eS1TaBNBc/exec?CPR=${cpr}`);
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
@@ -134,7 +90,7 @@
                 const data = await response.json();
                 if (data.length > 0) {
                     const student = data[0];
-                    resultDiv.innerHTML = `<h2>نتائج الدرجات</h2><p>اسم الطالب: ${student["اسم الطالب"]}</p><p>الدرجة: ${student["رقم الجلوس"]}</p>`;
+                    resultDiv.innerHTML = `<h2>نتائج الجلوس</h2><p>اسم الطالب: ${student["اسم الطالب"]}</p><p>رقم الجلوس: ${student["الدرجة"]}</p>`;
                 } else {
                     resultDiv.innerHTML = '<p>لا توجد بيانات للرقم الشخصي المدخل.</p>';
                 }
@@ -142,6 +98,7 @@
                 console.error(error);
                 resultDiv.innerHTML = `<p>خطأ في جلب البيانات: ${error.message}</p>`;
             } finally {
+                loadingDiv.style.display = 'none'; // Hide loading message
                 resultDiv.style.display = 'block'; // Show results div
             }
         }
